--- a/package.json
+++ b/package.json
@@ -1,12 +1,47 @@
 {
   "name": "create-ppv-app",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.ts",
+  "description": "Create web application with a zero config",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/popovdmitriiy/create-ppv-app.git"
+  },
+  "exports": "./dist/index.js",
+  "bin": {
+    "create-ppv-app": "./dist/index.js"
+  },
+  "engines": {
+    "node": ">=14.16"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "typecheck": "tsc",
+    "build": "tsup src/index.ts --format esm --clean --sourcemap --minify --metafile",
+    "dev": "tsup src/index.ts --format esm --watch --clean --onSuccess \"node dist/index.js\"",
+    "start": "node dist/index.js",
+    "check": "yarn lint && yarn typecheck",
+    "release": "changeset version",
+    "pub:release": "yarn build && npm publish"
   },
   "keywords": [],
   "author": "Popov Dmitriy popov.dmitriiy@gmail.com",
-  "license": "MIT"
+  "dependencies": {
+    "chalk": "^5.0.1",
+    "commander": "^9.4.0",
+    "fs-extra": "^10.1.0",
+    "inquirer": "^9.1.0",
+    "ora": "^6.1.2"
+  },
+  "devDependencies": {
+    "@types/fs-extra": "^9.0.13",
+    "@types/inquirer": "^9.0.1",
+    "@types/node": "^18.7.13",
+    "eslint": "^8.22.0",
+    "eslint-config-next": "^12.2.5",
+    "eslint-config-prettier": "^8.5.0",
+    "prettier": "^2.7.1",
+    "tsup": "^6.2.2",
+    "typescript": "^4.7.4"
+  },
+  "type": "module"
 }
