--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "dev": "tsup src/index.ts --format esm --watch --clean --onSuccess \"node dist/index.js\"",
     "start": "node dist/index.js",
     "check": "yarn lint && yarn typecheck",
-    "pub:release": "yarn build && npm publish"
+    "pub:release": "yarn build && npm publish",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "keywords": [],
   "author": "Popov Dmitriy popov.dmitriiy@gmail.com",
@@ -35,12 +37,13 @@
     "@types/fs-extra": "^9.0.13",
     "@types/inquirer": "^9.0.1",
     "@types/node": "^18.7.13",
-    "eslint": "^8.22.0",
+    "eslint": "8.22.0",
     "eslint-config-next": "^12.2.5",
     "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.7.1",
     "tsup": "^6.2.2",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "vitest": "^0.22.1"
   },
   "type": "module"
 }
