--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-ppv-app",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "description": "Create web application with a zero config",
   "license": "MIT",
   "repository": {
@@ -17,7 +17,7 @@
   "scripts": {
     "typecheck": "tsc",
     "build": "tsup src/index.ts --format esm --clean --sourcemap --minify --metafile",
-    "dev": "tsup src/index.ts --format esm --watch --clean --onSuccess \"node dist/index.js\"",
+    "dev": "tsup src/index.ts --format esm --watch --clean --onSuccess \"node dist/index.js --noGit --noInstall\"",
     "start": "node dist/index.js",
     "check": "yarn lint && yarn typecheck",
     "pub:release": "yarn build && npm publish",
