--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "typecheck": "tsc",
     "build": "tsup src/index.ts --format esm --clean --sourcemap --minify --metafile",
-    "dev": "tsup src/index.ts --format esm --watch --clean --onSuccess \"node dist/index.js --noGit --noInstall\"",
+    "dev": "tsup src/index.ts --format esm --watch --clean --onSuccess \"node dist/index.js --noInstall\"",
     "start": "node dist/index.js",
     "check": "yarn lint && yarn typecheck",
     "pub:release": "yarn build && npm publish",
